src/style.sass
/* ... */
    #{$pre}mask-repeat: no-repeat
    #{$pre}mask-size: contain

@mixin colored-icon($url, $color, $position: center)
  @include colored-icon-base($color, $position)
  @include colored-icon-url($url)


body
  margin: 0
  min-height: 100vh
  display: flex
  flex-direction: column
  background-color: $color-bg
  font-family: $font-family
  font-size: 16px

#ROOT
  width: 100%
  flex: 1
  display: flex
  flex-direction: column
  align-items: stretch
  font-size: $text-middle
  color: $color-fg

#header
  display: flex
  flex-direction: column
  align-items: stretch
  overflow-x: auto

  @media #{$desktop}
    align-self: center
    width: 600px

#header-main
  display: flex
  flex-direction: row
  justify-content: space-between
  background-color: $color-primary
  color: $color-on-primary

  @media #{$desktop}
    border-bottom-left-radius: $border-radius-section
    border-bottom-right-radius: $border-radius-section
    z-index: 2

#logo
  display: block
  align-self: stretch
  width: 70px
  height: 45px
  margin: 15px
  background: url(img/logo.svg) center no-repeat
  background-size: contain
  &:last-child
    background-image: url(img/logo_logic.svg)
    width: 100%
    height: 56px

#page-title
  align-self: center
  font-size: $text-huge
  font-weight: bold
  padding: 0 $text-huge

%header-extra
  align-self: flex-end
  display: flex
  flex-direction: row
  border-bottom-left-radius: $border-radius-section
  border-bottom-right-radius: $border-radius-section
  background-color: $color-element
  color: $color-fg-dim
  font-size: $text-big

  @media #{$mobile}
    border-bottom-right-radius: 0 !important

#header-config-option
  @extend %header-extra
  align-items: center
  padding: 10px 28px
  @media #{$desktop}
    padding-right: 22px

  > input
    margin-right: 12px
    &::before
      background-color: $color-fg-dim

  &:has(> input[checked])
    background-color: $color-element-highlight
    color: $color-fg
  > input[checked]::before
    background-color: $color-fg

#header-menu
  @extend %header-extra
  font-weight: bold
  text-transform: uppercase
  overflow: hidden

  > div
    padding: 10px 22px
    &:first-child
      padding-left: 28px
    @media #{$desktop}
      &:last-child
        padding-right: 28px

    &.selected
      background-color: $color-element-highlight
      color: $color-fg

    &:not(.selected)
      cursor: pointer

@media #{$desktop}
  #header-config-option, #header-menu
    margin-top: -$border-radius-section
  #header-config-option, #header-menu > div
    padding-top: 10px + $border-radius-section

#content
  flex: 1
  box-sizing: border-box
  @media #{$desktop}
    padding: 50px
  @media #{$mobile}
    padding: 50px 30px
  display: flex
  flex-direction: column
  align-items: center
  overflow-x: auto

#github
  @each $dim in [width, height]
    #{$dim}: 48px
  margin: 14px
  @include colored-icon("img/github.svg", $color-element-highlight)
  
  @media #{$desktop}
    position: absolute
    top: 0
    right: 0

  @media #{$mobile}
    align-self: flex-start


// ------------------------------------
// ---------   WIDGETS  ---------------
// ------------------------------------

.expr
  display: inline-flex
  flex-direction: row
  align-items: center

  .op
    font-size: text-small
    color: $color-fg-dim
    
  .op.big
    margin: 0 4px


.info-box
  display: flex
  flex-direction: column
  border-radius: $border-radius-section
  background-color: $color-element
  overflow: hidden

  > .title
    align-self: flex-start
    padding: 10px 18px
    border-bottom-right-radius: $border-radius-section
    font-weight: bold
    background-color: $color-primary
    color: $color-on-primary

  > .content
    align-self: stretch
    padding: 28px
    padding-top: 0
    margin-top: 20px
    overflow-x: auto
    overflow-y: hidden

  &.single-line
    flex-direction: row

    > .title
      align-self: stretch
      border-radius: 0

    > .content
      align-self: center
      padding: 0 20px
      margin: 0

.error-box
  align-self: stretch
  border-radius: $border-radius-element
  display: flex
  flex-direction: column
  padding: 6px 14px
  font-size: $text-small
  background-color: $color-bad
  overflow: hidden

.nowrap
  white-space: nowrap

.group
  @extend .info-box
  background: none
  border: 2px $color-element solid
  > .title
    background-color: $color-element
    color: $color-fg

%simple-element
  padding: 7px 14px
  border-radius: $border-radius-element
  border: none
  color: $color-fg

button
  @extend %simple-element
  box-sizing: content-box
  display: flex
  flex-direction: row
  align-items: center
  font-weight: bold
  text-transform: uppercase

  &[disabled]
    color: $color-fg-dim
    background-color: $color-element

  &:not([disabled])
    color: $color-on-primary
    background-color: $color-primary
    cursor: pointer

  &.action:not([disabled])
    color: $color-on-action
    background-color: $color-action !important
    &:hover
      background-color: lighten($color-action, 8%) !important

button.icon
  @each $dim in [width, height]
    #{$dim}: 36px
  padding: 0
  display: flex
  align-items: center
  justify-content: center

  &::before
    @include colored-icon-base($color-on-primary)
    @each $dim in [width, height]
      #{$dim}: 18px

  &[disabled]::before
    background-color: $color-fg-dim

  &.delete
    position: relative
    @each $dim in [width, height]
      #{$dim}: 2 * $delete-button-size
    @each $side in [top, bottom]
      margin-#{$side}: -$delete-button-size
    margin-right: -1px
    margin-left: 1px - 2*$delete-button-size
    float: right
    outline: 2px $color-bg solid
    z-index: 2

    &::before
      @each $dim in [width, height]
        #{$dim}: $delete-button-size
/* ... */

